# libshieldcomm

./: CMakeLists.txt  Makefile  Readme.md
common/: uart_protocol.c  uart_protocol.h
include/shieldcomm/: shieldcomm.hpp
src/: shieldcomm.cpp
